[CSS] Initial value for -webkit-line-clamp can't be expressed with its grammar https://bugs.webkit.org/show_bug.cgi?id=248638 rdar://103158259

Reviewed by Darin Adler and Oriol Brufau.

`line-clamp: none` is a valid value according to: https://drafts.csswg.org/css-overflow-4/#propdef-line-clamp

It also represents the behavior of the initial value of not clamping the lines.

Parse this value, so the default behavior of `-webkit-line-clamp` can be expressed via a CSS value.

* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/parsing/webkit-line-clamp-valid-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/cssom-getPropertyValue-common-checks-expected.txt:
* Source/WebCore/css/CSSPrimitiveValueMappings.h:
(WebCore::fromCSSValue):
* Source/WebCore/css/CSSProperties.json:

Canonical link: https://commits.webkit.org/281826@main